# compas_package_template

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_folder}}/: .bumpversion.cfg  .gitignore  AUTHORS.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
{{cookiecutter.project_folder}}/.github/workflows/: build.yml  docs.yml  pr-checks.yml  release.yml
{{cookiecutter.project_folder}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_folder}}/docs/_static/: versions.json
{{cookiecutter.project_folder}}/docs/api/: {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_folder}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  MANIFEST.in  requirements-dev.txt  setup.py  tasks.py
{{cookiecutter.project_name}}/.github/workflows/: build.yml  cleanup.yml  docs.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/docs/_templates/autosummary/: base.rst  method.rst  module.rst
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.py  tasks.py
{{cookiecutter.project_slug}}/docsource/: api.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/docsource/_templates/autosummary/: base.rst  class.rst  module.rst
{{cookiecutter.project_slug}}/docsource/api/: {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
